--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.1",
     "firebase": "^12.8.0",
     "lucide-react": "^0.563.0",
@@ -18,6 +19,7 @@
     "react-dom": "19.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
